Fix spacing inconsistencies

--- a/src/Components/ADT3DViewer/ADT3DViewer.scss
+++ b/src/Components/ADT3DViewer/ADT3DViewer.scss
@@ -47,7 +47,7 @@
     left: 4px;
     margin-bottom: 4px;
     position: absolute;
-    top: 12px;
+    top: 10px;
     width: 100%;
     z-index: 1;
 }
